--- a/css/scss/_defs.scss
+++ b/css/scss/_defs.scss
@@ -1,24 +1,35 @@
-@function random-color() {
-  @return rgb(random(255), random(255), random(255));
-}
+/**
+  Global variables
+**/
 
-@mixin mark($color: random-color()) {
-  border: 2px dotted transparentize($color, 0.5);
-  background-color: transparentize($color, 0.85);
-  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAJklEQVQYV2NkYGBogGIGEGAEEf///29gZGQESUAEoACsElkArBIADGgJguyRCM8AAAAASUVORK5CYII=");
-  background-repeat: repeat;
-  border-radius: 7px;
-  margin: 1px;
-  @content;
-}
-
-$max-cols: 12;
+$ENABLE-MARK: true;
+$MAX-COLS: 12;
 $dimension-ranges: (
   (sm, 576px),
   (md, 768px),
   (lg, 1024px),
   (xl, 1200px)
 );
+
+/**
+  Global functions
+**/
+
+@function random-color() {
+  @return rgb(random(255), random(255), random(255));
+}
+
+@mixin mark($color: random-color()) {
+  @if $ENABLE-MARK {
+    border: 2px dotted transparentize($color, 0.5);
+    background-color: transparentize($color, 0.85);
+    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAJklEQVQYV2NkYGBogGIGEGAEEf///29gZGQESUAEoACsElkArBIADGgJguyRCM8AAAAASUVORK5CYII=");
+    background-repeat: repeat;
+    border-radius: 7px;
+    margin: 1px;
+  }
+  @content;
+}
 
 /*
 @media (min-width: 576px) { ... }
