--- a/css/scss/yagf.scss
+++ b/css/scss/yagf.scss
@@ -32,6 +32,7 @@
   }
 
   // Include Bootstrap style rules.
-  @import 'bootstrap-ish';
+ // @import 'bootstrap-ish';
+ @import 'grids-notation';
 
 }
