--- a/css/scss/_grids-notation.scss
+++ b/css/scss/_grids-notation.scss
@@ -1,13 +1,10 @@
 /*******************************************************
  *   Generate rules for a Bootstrap style behaviour.
  ******************************************************/
-
  $dimIndex: 0; // This will be a numeric index of the dimension. Used only for color generation.
  @each $name, $dimension in $DIMENSION-RANGES {
- 
    // Generate rules for each dimension range
-   @media only screen and (min-width: $dimension) {
- 
+  @media only screen and (min-width: $dimension) {
      // Generate rules for each column pair. Notation is:
      //
      //   col-{dim}-{from}-{to}
@@ -16,26 +13,20 @@
      //   dim : Is the dimension name (i.e.: sm, md, lg, xl)
      //   from: Is the starting column index (numeric, from 1 to $MAX-COLS inclusive).
      //   to  : Is the ending column index (numeric, from 'from' value to $MAX-COLS inclusive).
-    
-         @each $top in $ROWS {
-            @for $left from 1 through $GRID-MAX-COLS {
-                @each $bottom in $ROWS {
-
-                    @for $right from 1 through $GRID-MAX-COLS{
-                        @debug ($top < $bottom);
-                        @if (($top <= $bottom) and ($left <= $right)) {
-                            .range-#{$name}-#{$top}#{$left}-#{$bottom}#{$right} {
-                                content: "";
-                            } 
-                        } 
-                           
-                    }
-                }       
-            } 
+    @for $top from 1 through length($ROWS) {
+      @for $left from 1 through $GRID-MAX-COLS {
+        @for $bottom from $top through length($ROWS) {
+          @for $right from $left through $GRID-MAX-COLS {
+            $top-name: nth($ROWS,$top);
+            $bottom-name: nth($ROWS,$bottom);
+            .range-#{$name}-#{$top-name}#{$left}-#{$bottom-name}#{$right} {
+              grid-column: #{$left}/#{$right + 1};
+              grid-row: #{$top}/#{$bottom + 1};
+            }
+          }
         }
+      }
     }
-
+    }
    $dimIndex: $dimIndex + 1;
- 
 }
- 
