added grid features

--- a/css/scss/yagf.scss
+++ b/css/scss/yagf.scss
@@ -23,6 +23,16 @@
     grid-gap: 0;
   }
 
+  .grid-mode {
+    @include mark(green);
+    display: grid;
+    grid-template-columns: repeat($GRID-MAX-COLS, 1fr);
+    grid-template-rows: repeat(length($ROWS), 1fr);
+    grid-gap: 0;
+  }
+
+
+
   [class*="col-"] {
     grid-column: 1 / span $MAX-COLS;
     @include mark(rgba(18, 77, 103, 0.5), $gradient: true, $mesh: true) {
@@ -30,9 +40,16 @@
       color: yellow;
     }
   }
+  [class*="range-"] {
+    grid-column: 1 / span $GRID-MAX-COLS;
+    @include mark(rgba(18, 77, 103, 0.5), $gradient: true, $mesh: true) {
+      background-color: rgba(18, 77, 103, 0.5);
+      color: yellow;
+    }
+  }
 
   // Include Bootstrap style rules.
- // @import 'bootstrap-ish';
+@import 'bootstrap-ish';
  @import 'grids-notation';
 
 }
