Created a demo for the framework

--- a/css/scss/_defs.scss
+++ b/css/scss/_defs.scss
@@ -16,6 +16,8 @@ $MAX-COLS: 12;        // Maximum number of columns enabled for bootstrap mode.
 $DIMENSION-RANGES: (
   (md,  720px),
   (lg, 1024px)
+//  (md,  400px),
+//  (lg, 800px)
 );
 
 /*grid notation variables and constants*/
