added paddings to framework classes

--- a/css/scss/yagf.scss
+++ b/css/scss/yagf.scss
@@ -50,7 +50,8 @@
   }
 
   // Include Bootstrap style rules.
-@import 'bootstrap-ish';
- @import 'grids-notation';
+//@import 'bootstrap-ish';
+// @import 'grids-notation';
+@import 'padding';
 
 }
