added flex alignment to framework classes

--- a/css/scss/yagf.scss
+++ b/css/scss/yagf.scss
@@ -53,6 +53,7 @@
 //@import 'bootstrap-ish';
 //@import 'grids-notation';
 //@import 'padding';
-  @import 'display';
+//@import 'display';
+@import 'alignment';
 
 }
