Added color selectors

--- a/css/scss/yagf.scss
+++ b/css/scss/yagf.scss
@@ -54,6 +54,7 @@
 //@import 'grids-notation';
 //@import 'padding';
 //@import 'display';
-@import 'alignment';
+//@import 'alignment';
+  @import 'colors';
 
 }
