--- a/css/yagf.css
+++ b/css/yagf.css
@@ -37,66 +37,198 @@
   grid-column: 1/span 6;
 }
 @media only screen and (min-width: 720px) {
-  .yagf .align-md-top {
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+  .yagf .bgcolor-md-aqua {
+    background-color: aqua;
   }
-  .yagf .align-md-vcenter {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  .yagf .txtcolor-md-aqua {
+    color: aqua;
   }
-  .yagf .align-md-bottom {
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
+  .yagf .bgcolor-md-black {
+    background-color: black;
   }
-  .yagf .align-md-left {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+  .yagf .txtcolor-md-black {
+    color: black;
   }
-  .yagf .align-md-hcenter {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .yagf .bgcolor-md-blue {
+    background-color: blue;
   }
-  .yagf .align-md-right {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+  .yagf .txtcolor-md-blue {
+    color: blue;
+  }
+  .yagf .bgcolor-md-fuchsia {
+    background-color: fuchsia;
+  }
+  .yagf .txtcolor-md-fuchsia {
+    color: fuchsia;
+  }
+  .yagf .bgcolor-md-gray {
+    background-color: gray;
+  }
+  .yagf .txtcolor-md-gray {
+    color: gray;
+  }
+  .yagf .bgcolor-md-green {
+    background-color: green;
+  }
+  .yagf .txtcolor-md-green {
+    color: green;
+  }
+  .yagf .bgcolor-md-lime {
+    background-color: lime;
+  }
+  .yagf .txtcolor-md-lime {
+    color: lime;
+  }
+  .yagf .bgcolor-md-maroon {
+    background-color: maroon;
+  }
+  .yagf .txtcolor-md-maroon {
+    color: maroon;
+  }
+  .yagf .bgcolor-md-navy {
+    background-color: navy;
+  }
+  .yagf .txtcolor-md-navy {
+    color: navy;
+  }
+  .yagf .bgcolor-md-olive {
+    background-color: olive;
+  }
+  .yagf .txtcolor-md-olive {
+    color: olive;
+  }
+  .yagf .bgcolor-md-purple {
+    background-color: purple;
+  }
+  .yagf .txtcolor-md-purple {
+    color: purple;
+  }
+  .yagf .bgcolor-md-red {
+    background-color: red;
+  }
+  .yagf .txtcolor-md-red {
+    color: red;
+  }
+  .yagf .bgcolor-md-silver {
+    background-color: silver;
+  }
+  .yagf .txtcolor-md-silver {
+    color: silver;
+  }
+  .yagf .bgcolor-md-teal {
+    background-color: teal;
+  }
+  .yagf .txtcolor-md-teal {
+    color: teal;
+  }
+  .yagf .bgcolor-md-white {
+    background-color: white;
+  }
+  .yagf .txtcolor-md-white {
+    color: white;
+  }
+  .yagf .bgcolor-md-yellow {
+    background-color: yellow;
+  }
+  .yagf .txtcolor-md-yellow {
+    color: yellow;
   }
 }
 @media only screen and (min-width: 1024px) {
-  .yagf .align-lg-top {
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+  .yagf .bgcolor-lg-aqua {
+    background-color: aqua;
   }
-  .yagf .align-lg-vcenter {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  .yagf .txtcolor-lg-aqua {
+    color: aqua;
   }
-  .yagf .align-lg-bottom {
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
+  .yagf .bgcolor-lg-black {
+    background-color: black;
   }
-  .yagf .align-lg-left {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+  .yagf .txtcolor-lg-black {
+    color: black;
   }
-  .yagf .align-lg-hcenter {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .yagf .bgcolor-lg-blue {
+    background-color: blue;
   }
-  .yagf .align-lg-right {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+  .yagf .txtcolor-lg-blue {
+    color: blue;
+  }
+  .yagf .bgcolor-lg-fuchsia {
+    background-color: fuchsia;
+  }
+  .yagf .txtcolor-lg-fuchsia {
+    color: fuchsia;
+  }
+  .yagf .bgcolor-lg-gray {
+    background-color: gray;
+  }
+  .yagf .txtcolor-lg-gray {
+    color: gray;
+  }
+  .yagf .bgcolor-lg-green {
+    background-color: green;
+  }
+  .yagf .txtcolor-lg-green {
+    color: green;
+  }
+  .yagf .bgcolor-lg-lime {
+    background-color: lime;
+  }
+  .yagf .txtcolor-lg-lime {
+    color: lime;
+  }
+  .yagf .bgcolor-lg-maroon {
+    background-color: maroon;
+  }
+  .yagf .txtcolor-lg-maroon {
+    color: maroon;
+  }
+  .yagf .bgcolor-lg-navy {
+    background-color: navy;
+  }
+  .yagf .txtcolor-lg-navy {
+    color: navy;
+  }
+  .yagf .bgcolor-lg-olive {
+    background-color: olive;
+  }
+  .yagf .txtcolor-lg-olive {
+    color: olive;
+  }
+  .yagf .bgcolor-lg-purple {
+    background-color: purple;
+  }
+  .yagf .txtcolor-lg-purple {
+    color: purple;
+  }
+  .yagf .bgcolor-lg-red {
+    background-color: red;
+  }
+  .yagf .txtcolor-lg-red {
+    color: red;
+  }
+  .yagf .bgcolor-lg-silver {
+    background-color: silver;
+  }
+  .yagf .txtcolor-lg-silver {
+    color: silver;
+  }
+  .yagf .bgcolor-lg-teal {
+    background-color: teal;
+  }
+  .yagf .txtcolor-lg-teal {
+    color: teal;
+  }
+  .yagf .bgcolor-lg-white {
+    background-color: white;
+  }
+  .yagf .txtcolor-lg-white {
+    color: white;
+  }
+  .yagf .bgcolor-lg-yellow {
+    background-color: yellow;
+  }
+  .yagf .txtcolor-lg-yellow {
+    color: yellow;
   }
 }
