--- a/css/scss/yagf.scss
+++ b/css/scss/yagf.scss
@@ -55,6 +55,6 @@
 //@import 'padding';
 //@import 'display';
 //@import 'alignment';
-  @import 'colors';
-
+//  @import 'colors';
+@import 'utilities';
 }
