--- a/css/scss/_colors.scss
+++ b/css/scss/_colors.scss
@@ -1,15 +1,19 @@
 // At least ten different classes to set the background and text colors of an element
 
-$COLORS: (aqua,  black, blue, fuchsia, gray, green, lime, maroon, navy, olive, purple, red, silver, teal, white, yellow);
-
-@each $name, $dimension in $DIMENSION-RANGES {
-  @media only screen and (min-width: $dimension) {
+@each $name, $dimension-min, $dimension-max in $DIMENSION-RANGES {
+  @media only screen and (min-width: $dimension-min) and (max-width: $dimension-max) {
     @each $color-name in $COLORS {
+
       .bgcolor-#{$name}-#{$color-name} {
         background-color: $color-name;
       }
+
       .txtcolor-#{$name}-#{$color-name} {
         color: $color-name;
+      }
+
+      .border-color-#{$name}-#{$color-name} {
+        border-color: $color-name;
       }
     }
   }
