--- a/css/scss/_display.scss
+++ b/css/scss/_display.scss
@@ -8,13 +8,13 @@ For display should have a class for each
 
 //TODO: Add display rules to fix an element to the top-left, top-right, bottom-left, bottom-right
 
-$DISPLAYS: (flex, hidden, none);
+@each $name, $dimension-min, $dimension-max in $DIMENSION-RANGES {
 
-@each $name, $dimension in $DIMENSION-RANGES {
-  @media only screen and (min-width: $dimension) {
+  // Generate rules for each dimension range
+  @media only screen and (min-width: $dimension-min) and (max-width: $dimension-max) {
     @each $display in $DISPLAYS {
       .display-#{$name}-#{$display} {
-        display: #{$display}
+        display: #{$display};
       }
     }
   }
