--- a/css/scss/_utilities.scss
+++ b/css/scss/_utilities.scss
@@ -1,37 +1,34 @@
-$FONT_SIZES: (10px,12px,14px,16px,18px,20px,22px,24px,26px,28px,30px,); 
+@each $name, $dimension-min, $dimension-max in $DIMENSION-RANGES {
 
-@each $name, $dimension in $DIMENSION-RANGES {
+  // Generate rules for each dimension range
+  @media only screen and (min-width: $dimension-min) and (max-width: $dimension-max) {
 
-    // Generate rules for each dimension range
-    @media only screen and (min-width: $dimension) {
-
-        .align-#{$name}-left {
-            text-align: left;
-        }
-
-        .align-#{$name}-center {
-            text-align: center;
-        }
-
-        .align-#{$name}-right {
-            text-align: right;
-        }
-
-        .fweight-#{$name}-bold {
-            font-weight:700; 
-        }
-        .fweight-#{$name}-normal {
-            font-weight:400;
-        }
-        .fweight-#{$name}-medium {
-            font-weight:500;
-        }
-
-        @each $font-size in $FONT_SIZES {
-            .fsize-#{$name}-#{$font-size} {
-                font-size: $font-size;
-            }
-        }
-
+    .align-#{$name}-left {
+        text-align: left;
     }
-}    
+
+    .align-#{$name}-center {
+        text-align: center;
+    }
+
+    .align-#{$name}-right {
+        text-align: right;
+    }
+
+    .fweight-#{$name}-bold {
+        font-weight:700;
+    }
+    .fweight-#{$name}-normal {
+        font-weight:400;
+    }
+    .fweight-#{$name}-medium {
+        font-weight:500;
+    }
+
+    @each $font-size in $FONT_SIZES {
+        .fsize-#{$name}-#{$font-size} {
+            font-size: $font-size;
+        }
+    }
+  }
+}
