--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,14 @@
 h1 {
   font-family: serif;
-  font-size: 32px;
-  text-align: center;
-  padding: 20px 0 0;
 }
 
 h2 {
   font-family: monospace;
-  font-size: 18px;
-  text-align: center;
-  padding: 0 0;
   margin-bottom: 20px;
 }
 
 .cell {
-  display: flex;
+/*  display: flex;*/
   align-items: center;
   justify-content: center;
   text-align: center;
